Replace SpeedrunGoal.Holder with SpeedrunGoalInfo in records to ensure metadata stability & consistency